@@ -36,6 +36,7 @@ enum TagType : uint8_t {
 	TAG_COMMENT,
 	TAG_DISC,
 	TAG_LABEL,
+        TAG_LYRICS,
 
 	TAG_MUSICBRAINZ_ARTISTID,
 	TAG_MUSICBRAINZ_ALBUMID,
